# nsight-systems-cookbook

./: INSTALL_CUTLASS.md  INSTALL_PYTORCH.md  README.md
gpu_profile/: GPU_PROFILING_GUIDE.md  QUICK_START.md  README_examples.md  README_nsys.md  SQLITE_QUERY_GUIDE.md  TROUBLESHOOTING.md  check_sqlite_content.sh  example10_comprehensive.sh  example1_basic_profile.sh  example1_memory_allocation.py  example2_data_transfer.py  example2_trace_options.sh  example3_memory_tracking.sh  example3_synchronization.py  example4_kernel_overhead.py  example4_sampling_frequency.sh  example5_duration_control.sh  example5_load_imbalance.py  example6_export_formats.sh  example6_memory_access.py  example7_comprehensive.py  example7_stats_output.sh  example8_advanced_options.sh  example9_process_control.sh  generate_sqlite_example.sh  install_nsys_latest.sh  nsys_profile_examples.sh  nvtx_tag_demo.py  profile_example1_memory_allocation.sh  profile_example2_data_transfer.sh  profile_example3_synchronization.sh  profile_example4_kernel_overhead.sh  profile_example5_load_imbalance.sh  profile_example6_memory_access.sh  profile_example7_comprehensive.sh  query_nvtx_data.sh  run_all_examples.sh  run_example_demo.sh
optimize_in_gpu/: Makefile
optimize_in_gpu/elementwise/: README.md  elementwise_add.cu  elementwise_visualization.html
optimize_in_gpu/reduce/: README_VISUALIZATION.md  reduce_v0_baseline.cu  reduce_v1_no_divergence_branch.cu  reduce_v2_no_bank_conflict.cu  reduce_v3_add_during_load.cu  reduce_v4_unroll_last_warp.cu  reduce_v5_completely_unroll.cu  reduce_v6_multi_add.cu  reduce_v7_shuffle.cu
optimize_in_gpu/sgemm/: README.md  sgemm_v1.cu  sgemm_v3.cu  sgemm_visualization.html
optimize_in_gpu/sgemv/: ComplexHalfGemv.cu  README.md  Sgemv_v0.cu  Sgemv_v1.cu  Sgemv_v2.cu  cuHalfComplex.cuh  sgemv_visualization.html
optimize_in_gpu/spmm/: spmm.cu  spmm_visualization.html
optimize_in_gpu/spmv/: spmv.cu
optimize_in_gpu/visualization/: ALL_FIXES_APPLIED.md  CANVAS_HEIGHT_FIX.md  COMPLETE_REDUCE_FIX.md  DRAW_FIXES_SUMMARY.md  FILE_LIST.md  FINAL_STEP_DISPLAY_FIX.md  FIX_DYNAMIC_RENDERING.md  FULLSCREEN_VISUALIZATION_FIX.md  INTEGRATION_SUMMARY.md  MISSING_STEP_FIX.md  OPTIMIZATION_SUMMARY.md  README.md  REDUCE_VISUALIZATION_IMPROVEMENTS.md  SYNC_FIX.md  TREE_DISPLAY_FIX.md  TREE_RENDERING_FIX.md  apply_draw_fixes_to_all.py  fix_all_reduce_draw_issues.py  fix_all_visualizations.py  fix_reduce_visualizations.py  fix_resize_canvases.py  fix_v2_to_v7_visualizations.py  generate_visualizations.py  index.html  reduce_index.html  reduce_v0_visualization.html  reduce_v1_visualization.html  reduce_v2_visualization.html  reduce_v3_visualization.html  reduce_v4_visualization.html  reduce_v5_visualization.html  reduce_v6_visualization.html  reduce_v7_visualization.html  reduce_visualization.html  server.py  spmv.html  start_server.sh  update_all_reduce_visualizations.py  verify_reduce_logic.md
universe_best_cuda_practice/: Makefile  README.md
universe_best_cuda_practice/1_cuda_reduce_study/: my_reduce_v0_global_memory.cu  my_reduce_v1_shared_memory.cu  my_reduce_v2_no_divergence_branch.cu  my_reduce_v3_no_bank_conflict.cu  (+6 more)
universe_best_cuda_practice/6_cutlass_study/: CMakeLists.txt  README_CUTLASS_PATH.md
(+12 files in other folders)
